# bobo_sim

developer_packages/: README.md
developer_packages/bobo_bringup/: CMakeLists.txt
developer_packages/bobo_bringup/launch/: mapping.launch.py  nav2.launch.py  test_change_switch.launch.py  test_jumper.py
developer_packages/bobo_bringup/scripts/: tk.py
developer_packages/bobo_bringup/src/: nav.cpp  trigger.cpp
developer_packages/bobo_bt/: CMakeLists.txt  package.xml
developer_packages/bobo_bt/launch/: README.md
developer_packages/bobo_carto/: CMakeLists.txt  package.xml
developer_packages/bobo_carto/launch/: cartographer_localization.launch.py  cartographer_mapping.launch.py
developer_packages/bobo_carto/rviz/: bobo_cartographer.rviz
developer_packages/bobo_ekf/config/: ekf.yaml
developer_packages/bobo_nav2/: TODO.md  package.xml
developer_packages_for_container/bobo_bringup/: package.xml
developer_packages_for_container/bobo_carto/: README.md
developer_packages_for_container/bobo_ekf/: CMakeLists.txt  package.xml
developer_packages_for_container/bobo_nav2/: CMakeLists.txt  README.md
docker/: .tmuxinator.yml  Dockerfile  README.md  TODO.md  build_image  rom_entrypoint.sh  start_new_container  start_simulation
mytmux/: .tmuxinator.yml
mytmux/carto/: .tmuxinator.yml
mytmux/cycle_race_for_check/: .tmuxinator.yml  circle_race.xml
mytmux/nav2/: .tmuxinator.yml
mytmux/race/: .tmuxinator.yml
mytmux/random_race_for_check/: .tmuxinator.yml  randon_race.xml
mytmux/slam/: .tmuxinator.yml
mytmux/software/: .tmuxinator.yml
simulation_packages/: README.md
simulation_packages/romrobots_description/: CMakeLists.txt  README.md  package.xml
simulation_packages/romrobots_description/config/: bobo_controllers.yaml  yoyo_controllers.yaml
simulation_packages/romrobots_description/launch/: bobo_description.launch.py  bobo_description_ros2_control.launch.py  yoyo_description.launch.py  yoyo_description_ros2_control.launch.py
simulation_packages/romrobots_description/meshes/: base_link.STL  left_wheel_link.STL  right_wheel_link.STL
simulation_packages/romrobots_description/urdf/: bobo.urdf  bobo.xacro  bobo_complete.xacro  bobo_ros2_control.xacro  yoyo.urdf  yoyo.xacro  yoyo_complete.xacro  yoyo_lidar.xacro  yoyo_ros2_control.xacro
simulation_packages/romrobots_gazebo/: CMakeLists.txt  README.md  package.xml
(+45 files in other folders)
